Fixed NavigationItemImpl::GetDisplayTitleForURL for 'file://' URL.

Use full URL spec if it ends with /

BUG=719982

Review-Url: https://codereview.chromium.org/2876053002
Cr-Commit-Position: refs/heads/master@{#471105}

Former-commit-id: 6728ff6b6cff9e4d0b5f684d6d8eac068a2d5df6